# gtfjson

./: Cargo.toml  README.md
data/: example.gtf  example.json
src/: cli.rs  convert.rs  io.rs  main.rs  map.rs  partition.rs  types.rs
