[package]
name = "gtf2json"
version = "0.1.0"
edition = "2021"
description = "A tool to convert GTF files to newline-delim JSON"
repository = "https://github.com/noamteyssier/gtf2json"
license = "MIT"
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["bioinformatics", "genomics", "gtf", "json", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.16", features = ["derive"] }
flate2 = "1.0.26"
gtftools = "0.1.7"
serde_json = "1.0.103"
