[package]
name = "gtfjson"
version = "0.1.3"
edition = "2021"
description = "A tool to convert GTF files to newline-delim JSON"
repository = "https://github.com/noamteyssier/gtfjson"
license = "MIT"
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["bioinformatics", "genomics", "gtf", "json", "parser"]

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.16", features = ["derive"] }
flate2 = "1.0.26"
gtftools = "0.1.9"
serde_json = "1.0.103"

[[bin]]
name = "gj"
path = "src/main.rs"
